# HegemonicTools

./: .gitignore  CMakeLists.txt
HegemonicTools/: CMakeLists.txt
HegemonicTools/include/: HegemonicArenaAllocator.h  HegemonicAsserts.h  HegemonicClock.h  HegemonicExpects.h  HegemonicFileHandler.h  HegemonicLogger.h  HegemonicMemory.h  HegemonicMemoryTracker.h  HegemonicPlatform.h  HegemonicProperties.h  HegemonicPropertiesHandler.h  HegemonicTimeManager.h  HegemonicTools.h  HegemonicToolsDefines.h  HegemonicToolsVersion.h  HegemonicToolsVersion.h.in  HegemonicWindowStructures.h  defines.h
HegemonicTools/src/: HegemonicArenaAllocator.cpp  HegemonicAsserts.cpp  HegemonicClock.cpp  HegemonicExpects.cpp  HegemonicFileHandler.cpp  HegemonicLogger.cpp  HegemonicMemory.cpp  HegemonicMemoryTracker.cpp  HegemonicPlatformWin32.cpp  HegemonicProperties.cpp  HegemonicPropertiesHandler.cpp  HegemonicTimeManager.cpp  HegemonicToolsDefines.cpp
HegemonicTools_TestHarness/: CMakeLists.txt
HegemonicTools_TestHarness/StubData/: properties.config.txt
HegemonicTools_TestHarness/src/: HegemonicTools_ArenaAllocator.cpp  HegemonicTools_Asserts.cpp  HegemonicTools_Clock.cpp  HegemonicTools_Defines.cpp  HegemonicTools_FileHandlerTests.cpp  HegemonicTools_Memory.cpp  HegemonicTools_MemoryTracker.cpp  HegemonicTools_PropertiesHandler.cpp  HegemonicTools_TimeManager.cpp
